cleaning has begun